Feature cognito token validate and varification
